# SentiLex

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  README.rst  find_prj_line.py  vectors.txt
data/: corpus.words.txt  form2lemma.txt  gpc.txt  gpc_sws_zrch_intersection.txt  gpc_sws_zrch_union.txt  input  turney_littman.txt  zrch.txt
data/GPC/: GermanPolarityClues-Positive-Lemma-21042012.tsv  gpc.txt
data/GeneralInquirer/: inqdict.txt
data/GermaNet_v9.0/: .gitignore  GN_V90-README.txt  adj.Allgemein.xml  adj.Bewegung.xml  adj.Gefuehl.xml  adj.Geist.xml  adj.Gesellschaft.xml  adj.Koerper.xml  adj.Menge.xml  adj.Ort.xml  adj.Pertonym.xml  adj.Perzeption.xml  adj.Relation.xml  adj.Substanz.xml  adj.Verhalten.xml  adj.Zeit.xml  adj.natPhaenomen.xml  adj.privativ.xml  definition_lexemes.txt  germanet_objects.dtd  germanet_relations.dtd  germanet_wiktionary.dtd  nomen.Artefakt.xml  nomen.Attribut.xml  nomen.Besitz.xml  nomen.Form.xml  nomen.Gefuehl.xml  nomen.Geschehen.xml  nomen.Gruppe.xml  nomen.Koerper.xml  nomen.Kognition.xml  nomen.Kommunikation.xml  nomen.Menge.xml  nomen.Mensch.xml  nomen.Motiv.xml  nomen.Nahrung.xml  nomen.Ort.xml  nomen.Pflanze.xml  nomen.Relation.xml  nomen.Substanz.xml  (+23 more)
data/GermanPolarityClues-2012/: GermanPolarityClues-Negative-Lemma-21042012.tsv  GermanPolarityClues-Neutral-21042012.tsv  GermanPolarityClues-Neutral-Lemma-21042012.tsv
data/SWS/: sws.txt
data/Zurich/: german.lex  zrch.txt
data/corpus/: cc_light.txt  potts.tokens.txt
data/eng/: .gitignore
data/es/: esuli_sebastiani.1024.binary.rocchio.txt  esuli_sebastiani.1024.binary.svm.txt  esuli_sebastiani.1024.ternary.svm.txt  esuli_sebastiani.128.binary.rocchio.txt  esuli_sebastiani.128.binary.svm.txt  esuli_sebastiani.128.ternary.rocchio.txt  esuli_sebastiani.128.ternary.svm.txt  esuli_sebastiani.2048.binary.rocchio.txt  esuli_sebastiani.2048.binary.svm.txt  esuli_sebastiani.2048.ternary.rocchio.txt  esuli_sebastiani.2048.ternary.svm.txt  esuli_sebastiani.256.binary.rocchio.txt  esuli_sebastiani.256.binary.svm.txt  esuli_sebastiani.256.ternary.rocchio.txt  esuli_sebastiani.256.ternary.svm.txt  esuli_sebastiani.4096.binary.rocchio.txt  esuli_sebastiani.4096.binary.svm.txt  esuli_sebastiani.4096.ternary.rocchio.txt  esuli_sebastiani.4096.ternary.svm.txt  esuli_sebastiani.48.binary.rocchio.txt  esuli_sebastiani.512.binary.rocchio.txt  esuli_sebastiani.512.binary.svm.txt  esuli_sebastiani.512.ternary.rocchio.txt  esuli_sebastiani.512.ternary.svm.txt  esuli_sebastiani.64.binary.rocchio.txt  esuli_sebastiani.64.binary.svm.txt  esuli_sebastiani.64.ternary.rocchio.txt  esuli_sebastiani.64.ternary.svm.txt  esuli_sebastiani.8192.binary.rocchio.txt  esuli_sebastiani.8192.binary.svm.txt  esuli_sebastiani.8192.ternary.rocchio.txt  esuli_sebastiani.8192.ternary.svm.txt  esuli_sebastiani_tlg_seedset.txt
data/hu/: hu_liu_hl_seedset.synrels.txt  hu_liu_hl_seedset.txt
data/results/: hl_bg_rao_lbl-prop.intersect.txt  hl_bg_rao_lbl-prop.union.txt  tkm_vel_sev.intersect.txt  tkm_vel_sev.union.txt
data/seeds/: emoticons_seedset.txt  gold_seedset.txt  hu_liu_seedset.txt  kim_hovy_2004.txt  remus_seedset.txt  turney_littman_2003.txt  turney_littman_2003_original.txt  turney_littman_gi_seedset.txt
data/snapshot_corpus_data/: example.txt
data/takamura/: 512.txt  8192.txt
data/vec2dic.0/: 1024.txt  128.txt  2048.txt  (+5 more)
notes/: awdallah.md  blair-goldensohn.md  knn_benchmarks.txt  linproj_benchmarks.txt  ncentroids_benchmarks.txt  pca_benchmarks.txt  rao-lbl-prop.md
scripts/: analyze_eval_log  apply2corpus.py  apply_dic2corpus.py  awdallah.py  bhtsne.py  blair_goldensohn.py  common.py  conll.py  enrich_seedset  esuli_sebastiani.py  eval_cardinality  eval_seed_sets  evaluate.py  extract_cc.py  find_prj_line.py  generate_lexicon.py  germanet.py  get_vectors.awk  gpc.py  graph.py  hu_liu.py  ising.py  join_lines  kim_hovy.py  kiritchenko.py  label_corpus  measure_corpus_agreement.py  merge_lexicons.py  rao.py  severyn.py  sws.py  takamura.py  tang.py  tokenizer.py  transfer_classes  trie.py  velikovich.py  visualize_graph.py  vo.py  w2v2leastsq.py  (+4 more)
src/: expansion.cpp  expansion.h  optparse.h  vec2dic.cpp
(+183 files in other folders)
